[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/actor/ConditionIcons.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/ui/icons/conditions/attack_up.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/ui/icons/conditions/defence_down.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/icons/conditions/move_up.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/ui/icons/conditions/move_down.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/ui/icons/conditions/attack_down.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/ui/icons/conditions/defence_up.png" type="Texture" id=7]

[node name="ConditionIcons" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="StatModIcons" type="Node2D" parent="."]

[node name="AttackUp" type="Sprite" parent="StatModIcons"]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="AttackDown" type="Sprite" parent="StatModIcons"]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="DefenceUp" type="Sprite" parent="StatModIcons"]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="DefenceDown" type="Sprite" parent="StatModIcons"]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="MoveUp" type="Sprite" parent="StatModIcons"]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="MoveDown" type="Sprite" parent="StatModIcons"]
visible = false
position = Vector2( 4, 4 )
texture = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
